# mmlir

./: CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
include/: .gitignore  CMakeLists.txt  MinimalCAPI.h  MinimalDialect.h  MinimalDialect.td
mmlir/: .gitignore  CMakeLists.txt  Minimal.td  MinimalExtension.cpp
mmlir/dialects/: minimal.py
python/: CMakeLists.txt  Minimal.td  MinimalExtension.cpp
python/mmlir/dialects/: minimal.py
src/: CMakeLists.txt  MinimalCAPI.cpp  MinimalDialect.cpp  minimal-opt.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/lit/: pass.mlir  smoke.mlir
test/python/: smoketest.py
